# wulfpack

./: .gitignore  CONTEXT.md  Dockerfile.e2e  Dockerfile.lambda-builder  README.md  package-lock.json  package.json
.agent/: CONTEXT.md  backport_changes.md  develop_feature.md  instantiate_template.md
.agent/rules/: changing-files.md  global.md
.agent/workflows/: backport-changes.md  backport_changes.md  develop-feature.md  develop_feature.md  instantiate-template.md  instantiate_template.md  next.md
.github/: dependabot.bak.yml  dependabot.yml
.github/workflows/: automerge-dependabot.yml  copyright.yml  dependabot-bulk-failure-handler.yml  publish-e2e-image.yml  publish-lambda-builder.yml  pull-request.yml
adr/: 000-tool-set.md  001-static-spa.md  002-rust-backend.md  003-mobile-tauri-wrapper.md  004-protobuf-http.md  005-dynamodb.md
docs/: frontend-quickstart.md
prompts/: setup_frontend_toolset.prompt
scripts/: check_defaults.py
template/: cookiecutter.json
template/%[cookiecutter.project_slug]%/: CONTEXT.md  README.md  docker-compose.yml
template/%[cookiecutter.project_slug]%/.agent/: CONTEXT.md  change_frontend.md
template/%[cookiecutter.project_slug]%/.agent/rules/: backend.md  changing-files.md  database.md  frontend.md  global.md  requirements.md
template/%[cookiecutter.project_slug]%/.agent/workflows/: change_backend.md  change_protocols.md  mcp_server_template.json  onboarding.md  run-locally.md  run_locally.md  test-e2e.md  test_e2e.md
template/%[cookiecutter.project_slug]%/.github/: dependabot.yml
template/%[cookiecutter.project_slug]%/.github/workflows/: copyright.yml  pull-request.yml
template/%[cookiecutter.project_slug]%/backend/: Cargo.toml  build.rs
template/%[cookiecutter.project_slug]%/backend/src/: cognito-handler.rs  lib.rs  message-handler.rs  password-policy.rs
template/%[cookiecutter.project_slug]%/backend/src/protocol-macro/src/: lib.rs
template/%[cookiecutter.project_slug]%/backend/src/shared/: aws_config.rs  cognito_user_pool_event.rs  dynamodb.rs  http.rs  mod.rs  protocols.rs  users.rs
template/%[cookiecutter.project_slug]%/frontend/: .prettierrc  package-lock.json  package.json  playwright.config.js  tsconfig.config.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts
template/%[cookiecutter.project_slug]%/frontend/.storybook/: main.ts
template/%[cookiecutter.project_slug]%/frontend/e2e/: passwordForgotten.test.ts  signIn.test.ts  signUp.test.ts
template/%[cookiecutter.project_slug]%/infrastructure/: .prettierrc  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
template/%[cookiecutter.project_slug]%/infrastructure/lib/: cdk-stack.ts  config.ts
template/%[cookiecutter.project_slug]%/infrastructure/test/: cdk.test.ts  nag.test.ts
template/%[cookiecutter.project_slug]%/local/cognito-local-volume/: config.json
template/%[cookiecutter.project_slug]%/protocols/: buf.yaml  password_policy.proto
template/%[cookiecutter.project_slug]%/protocols/sign_up_data/: sign_up_data.proto
template/{[cookiecutter.project_slug]}/: .gitignore  LICENSE  README.md  docker-compose.yml
template/{[cookiecutter.project_slug]}/backend/: Cargo.toml
template/{[cookiecutter.project_slug]}/backend/src/: message-handler.rs
template/{[cookiecutter.project_slug]}/frontend/: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.e2e.json  tsconfig.json  vite.config.ts
template/{[cookiecutter.project_slug]}/frontend/.storybook/: main.ts  preview-head.html  preview.ts
template/{[cookiecutter.project_slug]}/frontend/src/: app.css
template/{[cookiecutter.project_slug]}/infrastructure/: README.md  package-lock.json
template/{[cookiecutter.project_slug]}/infrastructure/lib/: cargo-lambda-function.ts
template/{[cookiecutter.project_slug]}/infrastructure/test/: cdk.test.ts
template/{{cookiecutter.project_slug}}/: .gitignore.j2  docker-compose.yml
template/{{cookiecutter.project_slug}}/backend/: README.md
template/{{cookiecutter.project_slug}}/backend/src/: cognito-handler.rs
template/{{cookiecutter.project_slug}}/frontend/: .gitignore  README.md  package.json  playwright.config.js  svelte.config.js  tsconfig.app.json  tsconfig.config.json  tsconfig.json  tsconfig.tests.json  vite.config.js
template/{{cookiecutter.project_slug}}/frontend/scripts/: inject-splash-into-fallback.mjs
template/{{cookiecutter.project_slug}}/frontend/src/: app.css
template/{{cookiecutter.project_slug}}/infrastructure/: README.md  package-lock.json  package.json
(+48 files in other folders)
