[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros"] }
lambda_runtime = "0.14.4"
lambda_http = "0.17.0"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
prost = "0.14.1"
protocol_macro = { path = "src/protocol-macro" }
snap = "1.1.1"
aws-config = "1.8.8"
aws-credential-types = "1.2.8"
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["sqs", "cognito"] }
aws-sdk-cognitoidentityprovider = "1.100.0"
wiremock = "0.6.5"

[build-dependencies]
prost-build = "0.14.1"
prost-types = "0.14.1"
prost = "0.14.1"

[[bin]]
name = "password-policy"
path = "src/password-policy.rs"

[[bin]]
name = "cognito-handler"
path = "src/cognito-handler.rs"

[[bin]]
name = "message-handler"
path = "src/message-handler.rs"

[profile.release]
codegen-units = 1 # Reduce binary size by compiling all code in one unit
lto = "fat" # Enable best link-time optimization to reduce binary size
